Fixed alignment of buttons & inputs

--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,4 +1,4 @@
-.register-form {
+div .register-form {
   width: 80%;
   height: 70vh;
   margin-top: 5%;
