--- a/src/Components/UserProfile/User.css
+++ b/src/Components/UserProfile/User.css
@@ -1,13 +1,15 @@
 .user-form {
     width: 80%;
-    height: 70vh;
+    height: auto;
     margin-top: 5%;
     margin-left: 10%;
+    padding: 1%;
     border: 2px solid lightgray;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .menu {
@@ -26,4 +28,11 @@
     height: 40vh;
     border: 1px solid lightgray
 
+}
+
+div .update-profile {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    align-items: baseline;
 }
